# mia

./: .gitignore  Makefile  README.md  pyproject.toml
datasets/: README.md  download_texas.sh
demo/: adult_demo.ipynb  cifar10_demo.ipynb  vis_texas_dataset.ipynb
demo/.ipynb_checkpoints/: adult_demo-checkpoint.ipynb
mia/: __init__.py  attack.py  protection.py
mia/attack/: estimators.py
mia/models/: __init__.py  dummy_model.py  shadow_model.py
mia/utils/: __init__.py  dataset_splitter.py  dummy_model.py
tests/: test_shallow_model.py  test_split_dataset.py
