[tool.poetry]
name = "mia"
version = "0.1.0"
description = ""
authors = ["SeuperHakkerJa <jacobxiaochen@sina.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.1"
numpy = "^1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
