[tool.poetry]
name = "mia"
version = "0.1.0"
description = ""
authors = ["SeuperHakkerJa <jacobxiaochen@sina.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.1"
numpy = "^1.26.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
